--- a/test-output/old/AdminSmokeTestSuite/methods-not-run.html
+++ b/test-output/old/AdminSmokeTestSuite/methods-not-run.html
@@ -1,2 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>admin.sothelabs.testUtils.SetupUtils.startSession</td></tr>
+<tr><td>admin.sothelabs.testUtils.SetupUtils.startSession</td></tr>
+<tr><td>admin.sothelabs.testUtils.SetupUtils.quitSession</td></tr>
+<tr><td>admin.sothelabs.testUtils.SetupUtils.quitSession</td></tr>
 </table>
