--- a/test-output/old/AdminSmokeTestSuite/methods.html
+++ b/test-output/old/AdminSmokeTestSuite/methods.html
@@ -1,24 +1,52 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>AdminSmokeTestSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67ec80">  <td>19/01/11 10:30:29</td>   <td>0</td> <td title="&gt;&gt;SetupUtils.startSession()[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">&gt;&gt;startSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@152005629</td>   <td></td> </tr>
-<tr bgcolor="946fab">  <td>19/01/11 10:30:38</td>   <td>9313</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.createNewConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">createNewConsignment</td> 
-  <td>main@152005629</td>   <td></td> </tr>
-<tr bgcolor="67ec80">  <td>19/01/11 10:30:49</td>   <td>19567</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@152005629</td>   <td></td> </tr>
-<tr bgcolor="946fab">  <td>19/01/11 10:30:49</td>   <td>19568</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.editConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">editConsignment</td> 
-  <td>main@152005629</td>   <td></td> </tr>
-<tr bgcolor="67ec80">  <td>19/01/11 10:30:59</td>   <td>29792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@152005629</td>   <td></td> </tr>
-<tr bgcolor="946fab">  <td>19/01/11 10:30:59</td>   <td>29792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.addObjectsToConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">addObjectsToConsignment</td> 
-  <td>main@152005629</td>   <td></td> </tr>
-<tr bgcolor="67ec80">  <td>19/01/11 10:31:14</td>   <td>44675</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@152005629</td>   <td></td> </tr>
-<tr bgcolor="946fab">  <td>19/01/11 10:31:14</td>   <td>44676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.removeObjectsFromConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">removeObjectsFromConsignment</td> 
-  <td>main@152005629</td>   <td></td> </tr>
-<tr bgcolor="67ec80">  <td>19/01/11 10:31:19</td>   <td>49789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@152005629</td>   <td></td> </tr>
-<tr bgcolor="67ec80">  <td>19/01/11 10:31:19</td>   <td>49834</td> <td title="&lt;&lt;SetupUtils.quitSession()[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">&lt;&lt;quitSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@152005629</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/14 15:06:30</td>   <td>0</td> <td title="&gt;&gt;SetupUtils.startSession()[pri:0, instance:admin.sothelabs.testCases.CreateObject@7f690630]">&gt;&gt;startSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="946fab">  <td>19/01/14 15:06:39</td>   <td>8089</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateObject.createNewObject()[pri:0, instance:admin.sothelabs.testCases.CreateObject@7f690630]">createNewObject</td> 
+  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/14 15:06:58</td>   <td>27121</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.CreateObject@7f690630]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="946fab">  <td>19/01/14 15:06:59</td>   <td>28235</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateObject.editObject()[pri:0, instance:admin.sothelabs.testCases.CreateObject@7f690630]">editObject</td> 
+  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/14 15:07:25</td>   <td>54891</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.CreateObject@7f690630]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="7e6faf">  <td>19/01/14 15:07:26</td>   <td>55675</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.createNewConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@3cda1055]">createNewConsignment</td> 
+  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/14 15:07:37</td>   <td>66067</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@3cda1055]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="7e6faf">  <td>19/01/14 15:07:37</td>   <td>66841</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.editConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@3cda1055]">editConsignment</td> 
+  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/14 15:07:46</td>   <td>75971</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@3cda1055]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="7e6faf">  <td>19/01/14 15:07:47</td>   <td>76489</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.addObjectsToConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@3cda1055]">addObjectsToConsignment</td> 
+  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/14 15:08:01</td>   <td>90854</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@3cda1055]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="7e6faf">  <td>19/01/14 15:08:02</td>   <td>91739</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.removeObjectsFromConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@3cda1055]">removeObjectsFromConsignment</td> 
+  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/14 15:08:07</td>   <td>96605</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@3cda1055]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="86ae92">  <td>19/01/14 15:08:08</td>   <td>97216</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.createAuction()[pri:0, instance:admin.sothelabs.testCases.Auction@7a5d012c]">createAuction</td> 
+  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/14 15:08:32</td>   <td>121719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@7a5d012c]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="86ae92">  <td>19/01/14 15:08:33</td>   <td>122363</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.editAuction()[pri:0, instance:admin.sothelabs.testCases.Auction@7a5d012c]">editAuction</td> 
+  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/14 15:08:37</td>   <td>126038</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@7a5d012c]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="86ae92">  <td>19/01/14 15:08:37</td>   <td>126834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.publishAuction()[pri:0, instance:admin.sothelabs.testCases.Auction@7a5d012c]">publishAuction</td> 
+  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/14 15:08:45</td>   <td>134102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@7a5d012c]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="86ae92">  <td>19/01/14 15:08:45</td>   <td>134772</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.addAndRemoveLots()[pri:0, instance:admin.sothelabs.testCases.Auction@7a5d012c]">addAndRemoveLots</td> 
+  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/14 15:09:07</td>   <td>156135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@7a5d012c]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="86ae92">  <td>19/01/14 15:09:08</td>   <td>157124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.addAndPublishLots()[pri:0, instance:admin.sothelabs.testCases.Auction@7a5d012c]">addAndPublishLots</td> 
+  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/14 15:09:31</td>   <td>180779</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@7a5d012c]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/14 15:09:32</td>   <td>181475</td> <td title="&lt;&lt;SetupUtils.quitSession()[pri:0, instance:admin.sothelabs.testCases.CreateObject@7f690630]">&lt;&lt;quitSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
 </table>
