--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,24 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a9e876">  <td>19/01/29 14:55:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.addObjectsToConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@96532d6]">addObjectsToConsignment</td> 
+<tr bgcolor="a9e876">  <td>19/02/08 09:38:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.addAndPublishLots()[pri:0, instance:admin.sothelabs.testCases.Auction@3796751b]">addAndPublishLots</td> 
   <td>main@895947612</td>   <td></td> </tr>
-<tr bgcolor="dca596">  <td>19/01/29 14:55:37</td>   <td>-9198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@96532d6]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@895947612</td>   <td></td> </tr>
-<tr bgcolor="dca596">  <td>19/01/29 14:55:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@96532d6]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@895947612</td>   <td></td> </tr>
-<tr bgcolor="dca596">  <td>19/01/29 14:56:00</td>   <td>13384</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@96532d6]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@895947612</td>   <td></td> </tr>
-<tr bgcolor="dca596">  <td>19/01/29 14:56:05</td>   <td>18499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@96532d6]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@895947612</td>   <td></td> </tr>
-<tr bgcolor="a9e876">  <td>19/01/29 14:55:28</td>   <td>-19105</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.createNewConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@96532d6]">createNewConsignment</td> 
+<tr bgcolor="a9e876">  <td>19/02/08 09:37:54</td>   <td>-21578</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.addAndRemoveLots()[pri:0, instance:admin.sothelabs.testCases.Auction@3796751b]">addAndRemoveLots</td> 
   <td>main@895947612</td>   <td></td> </tr>
-<tr bgcolor="a9e876">  <td>19/01/29 14:55:37</td>   <td>-9198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.editConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@96532d6]">editConsignment</td> 
+<tr bgcolor="dca596">  <td>19/02/08 09:37:41</td>   <td>-34410</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@3796751b]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@895947612</td>   <td></td> </tr>
+<tr bgcolor="dca596">  <td>19/02/08 09:37:46</td>   <td>-30222</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@3796751b]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@895947612</td>   <td></td> </tr>
+<tr bgcolor="dca596">  <td>19/02/08 09:37:54</td>   <td>-21579</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@3796751b]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@895947612</td>   <td></td> </tr>
+<tr bgcolor="dca596">  <td>19/02/08 09:38:16</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@3796751b]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@895947612</td>   <td></td> </tr>
+<tr bgcolor="dca596">  <td>19/02/08 09:38:40</td>   <td>24584</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@3796751b]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@895947612</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/02/08 09:37:14</td>   <td>-61815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.createAuction()[pri:0, instance:admin.sothelabs.testCases.Auction@3796751b]">createAuction</td> 
   <td>main@895947612</td>   <td></td> </tr>
-<tr bgcolor="dca596">  <td>19/01/29 14:56:05</td>   <td>18525</td> <td title="&lt;&lt;SetupUtils.quitSession()[pri:0, instance:admin.sothelabs.testCases.Consignment@96532d6]">&lt;&lt;quitSession</td> 
+<tr bgcolor="a9e876">  <td>19/02/08 09:37:41</td>   <td>-34410</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.editAuction()[pri:0, instance:admin.sothelabs.testCases.Auction@3796751b]">editAuction</td> 
+  <td>main@895947612</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/02/08 09:37:46</td>   <td>-30222</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.publishAuction()[pri:0, instance:admin.sothelabs.testCases.Auction@3796751b]">publishAuction</td> 
+  <td>main@895947612</td>   <td></td> </tr>
+<tr bgcolor="dca596">  <td>19/02/08 09:38:40</td>   <td>24606</td> <td title="&lt;&lt;SetupUtils.quitSession()[pri:0, instance:admin.sothelabs.testCases.Auction@3796751b]">&lt;&lt;quitSession</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@895947612</td>   <td></td> </tr>
-<tr bgcolor="a9e876">  <td>19/01/29 14:56:00</td>   <td>13384</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.removeObjectsFromConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@96532d6]">removeObjectsFromConsignment</td> 
-  <td>main@895947612</td>   <td></td> </tr>
-<tr bgcolor="dca596">  <td>19/01/29 14:55:18</td>   <td>-28190</td> <td title="&gt;&gt;SetupUtils.startSession()[pri:0, instance:admin.sothelabs.testCases.Consignment@96532d6]">&gt;&gt;startSession</td> 
+<tr bgcolor="dca596">  <td>19/02/08 09:36:07</td>   <td>-128455</td> <td title="&gt;&gt;SetupUtils.startSession()[pri:0, instance:admin.sothelabs.testCases.Auction@3796751b]">&gt;&gt;startSession</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@895947612</td>   <td></td> </tr>
 </table>
